<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".userScreens.CambioScreen">

    <include
        android:id="@+id/toolbarCambioScreen"
        layout="@layout/toolbar_cambio_screen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/view"
        android:contentDescription="@string/informacoes_da_moeda_currency_information"
        android:importantForAccessibility="noHideDescendants"
        android:layout_width="327dp"
        android:layout_height="171dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="408dp"
        android:layout_marginTop="88dp"
        android:background="@drawable/fundo_moedas_cambio_screen"
        tools:layout_editor_absoluteX="42dp"
        tools:layout_editor_absoluteY="119dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <TextView
        android:id="@+id/nameCurrency"
        android:layout_width="295sp"
        android:layout_height="31sp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="15.11sp"
        android:layout_marginBottom="124.89sp"
        android:fontFamily="@font/arial_black"
        android:text=""
        android:textAlignment="viewStart"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:focusable="true"
        android:importantForAccessibility="yes"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="@+id/view"
        tools:listitem="@layout/cambio_screen" />

    <TextView
        android:id="@+id/textVariation"
        android:layout_width="295dp"
        android:layout_height="22dp"
        android:layout_marginHorizontal="16sp"
        android:layout_marginTop="60.9sp"
        android:layout_marginBottom="88.1sp"
        android:text=""
        android:textAlignment="viewStart"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:importantForAccessibility="yes"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <TextView
        android:id="@+id/textBuyCurrency"
        android:layout_width="295dp"
        android:layout_height="19dp"
        android:layout_marginHorizontal="16sp"
        android:layout_marginTop="101.78sp"
        android:layout_marginBottom="52.22sp"
        android:text=""
        android:textColor="#FFFFFFFF"
        android:textSize="16sp"
        android:importantForAccessibility="yes"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.089"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.616"/>

    <TextView
        android:id="@+id/textSellCurrency"
        android:layout_width="295dp"
        android:layout_height="19dp"
        android:layout_marginHorizontal="16sp"
        android:layout_marginTop="133.84sp"
        android:layout_marginBottom="20.16sp"
        android:text=""
        android:textColor="#FFFFFFFF"
        android:textSize="16sp"
        android:importantForAccessibility="yes"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.089"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.811"/>


    <EditText
        android:id="@+id/edT_Quantidade"
        android:layout_width="327dp"
        android:layout_height="54dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="401dp"
        android:layout_marginBottom="212dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/card_quantidade_cambio_screen"
        android:inputType="numberDecimal"
        android:hint="@string/quantidade"
        android:textColorHint="@color/white"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:autofillHints="" />

    <TextView
        android:id="@+id/text_SaldoDisponivelCambioScreen"
        android:layout_width="327dp"
        android:layout_height="27dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="349dp"
        android:layout_marginTop="291dp"
        android:text=""
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_ValorEmCaixaCambioScreen"
        android:layout_width="327dp"
        android:layout_height="27dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="342dp"
        android:layout_marginBottom="298dp"
        android:text=""
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_Sell_Cambio_Screen"
        android:layout_width="151dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="584dp"
        android:layout_marginEnd="200dp"
        android:layout_marginBottom="40dp"
        android:alpha=".5"
        android:background="@drawable/card_buttons_cambio_screen"
        android:text="@string/vender"
        android:textColor="#BCAAA4"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_Buy_Cambio_Screen"
        android:layout_width="151dp"
        android:layout_height="48dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="584dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/card_buttons_cambio_screen"
        android:text="@string/comprar"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_back_cambio_screen"
        android:layout_width="128dp"
        android:layout_height="48dp"
        android:layout_marginStart="9dp"
        android:layout_marginEnd="283dp"
        android:background="@color/black"
        android:drawableStart="@drawable/button_back_cambio_screen"
        android:fontFamily="@font/helvetica"
        android:text="@string/moedas"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbarCambioScreen"
        app:layout_constraintEnd_toEndOf="@+id/toolbarCambioScreen"
        app:layout_constraintHorizontal_bias="0.062"
        app:layout_constraintStart_toStartOf="@+id/toolbarCambioScreen"
        app:layout_constraintTop_toTopOf="@+id/toolbarCambioScreen" />

</androidx.constraintlayout.widget.ConstraintLayout>